css/theme.css
/* ... */
.theme-help-box-container h3 {
  position: relative;
  margin-top: 0px;
  top: 0px;
  left: 14px;
  color: #98bb60; 
  font-weight: normal;
  font-size: 14px;
  width: 700px;
}

.theme-help-box-content {
  min-height: 65px;
  padding-top: 5px;
}

.theme-help-box .theme-dialogbox-info {
  margin-top: 5px;
  background: none;  
  border: none;
  color: #686868;
}

.theme-help-box p {
  margin-left: 15px;  
}

.theme-help-box ul {
  margin-bottom: 0px;
}

.theme-help-box-icon {
  height: 50px;
  width: 50px;
  float: left;
  margin-left: 15px;
  margin-bottom: 15px;
  margin-top: 0px;
}

.theme-help-box-description {
  /* width: 360px; */
  display: inline;
  float: left;
  clear: right;
  margin-top: 2px;
}

.theme-help-box-breadcrumb {
  color: #98bb60; 
  font-size: 14px;
  margin-top: 6px;
  margin-bottom: 20px;
}

.theme-help-box-assets {
  /* display: inline; */
  margin-top: 10px;
}

.theme-help-box-assets-style {
  border: 1px solid #e1e1e1;
  padding: 5px;
  border-radius: 9px;
  -moz-border-radius: 9px;
  -webkit-border-radius: 9px;
  text-align: center;
  height: 15px
  clear: both;
  margin-right: 15px;
  float: right;
}

.theme-help-box-assets-icons {
  float: right;
  padding-bottom: 1px;
}

.theme-help-box-user-guide a {
  background: url(../images/user-guide-green.png) no-repeat top left;
  padding-left: 20px;
  padding-top: 1px;
  padding-bottom: 2px;
}

@media screen {
  .theme-help-box-user-guide a, .theme-help-box-user-guide a {
    padding-bottom: 0px;  
  }
}

.theme-help-box-user-guide a:hover {
  background-position: 0px -15px;
  padding-left: 20px;
  padding-top: 1px;
  color: #62799a;
}

.theme-help-box-user-guide a, x:-moz-any-link, x:default {
  padding-bottom: 1px;
}

.theme-help-box-support a {
  background: url(../images/help-green.png) no-repeat top left;
  padding-left: 25px;
  padding-top: 1px;
  padding-bottom: 2px;
  padding-right: 10px;
}

@media screen {
  .theme-help-box-user-guide a, .theme-help-box-support a {
    padding-bottom: 0px;  
  }
}

.theme-help-box-support a:hover {
  background-position: 0px -15px;
  padding-left: 25px;
  padding-top: 1px;
  padding-right: 10px;
  color: #62799a;
}

.theme-help-box-support a, x:-moz-any-link, x:default {
  padding-bottom: 1px;
}

/* ------------------------------------------------------------------------- */
/* Wizard Intro */
/* ------------------------------------------------------------------------- */

.theme-wizard-intro-icon {
  height: 50px;
  width: 50px;
  margin-left: 15px;
  margin-bottom: 15px;
}

.theme-wizard-intro-description {
  margin-top: 0px;
  margin-left: 30px;
  margin-right: 10px;
}

/* ------------------------------------------------------------------------- */
/* Progress Bar */
/* ------------------------------------------------------------------------- */

.ui-progressbar {
  background: url(../images/progressbar-bg.jpg) repeat-x;
  border-radius: 5px; 
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  height: 20px;
  border: 1px solid #d1d3d4;
}

.ui-progressbar-value {
  background-color: #749640;
  position: relative;
  top: 1px;
  height: 24px;
  margin-top: 0px;
  border-bottom-left-radius: 5px;
  -moz-border-radius-bottomleft: 5px;  
  -webkit-border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -webkit-border-top-left-radius: 5px;
}

/* ------------------------------------------------------------------------- */
/* Dialogs */
/* ------------------------------------------------------------------------- */

.ui-dialog {
  background: #FFFFFF url(../images/header-bg-green.png) repeat-x;
}

/* ------------------------------------------------------------------------- */
/* Tabs */
/* ------------------------------------------------------------------------- */

.ui-tabs { padding: 0; zoom: 1; background: white; border: none; margin-top: 10px}
.ui-tabs .ui-tabs-nav { list-style: none; position: relative; padding:; }
.ui-tabs .ui-tabs-nav li { position: relative; float: left; border-bottom-width: 0 !important; margin: 0 .2em -1px 0; padding: 0; }
.ui-tabs .ui-tabs-nav li a { float: left; text-decoration: none; padding: .5em 1em; font-size: 11px; }
.ui-tabs .ui-tabs-nav li.ui-tabs-selected { padding-bottom: 1px; border-bottom-width: 0; }
.ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }

.ui-tabs .ui-widget-header {
border-bottom: 1px solid #944d16;
border-top:none;
border-left: none;
border-right: none;
}

.ui-tabs-nav .ui-tabs-selected a {
  color: #FFFFFF;
  background: #FFFFFF url(../images/tabs-nav-selected-green.png) repeat-x scroll 50% 50%;
  border-top-right-radius: 10px;
  -moz-border-radius-topright: 10px;  
  -webkit-border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  -moz-border-radius-topleft: 10px;
  -webkit-border-top-left-radius: 10px;
}

.ui-tabs-nav a {
  color: #686868;
  background-color: white;
  border-top-right-radius: 10px;
  -moz-border-radius-topright: 10px;  
  -webkit-border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  -moz-border-radius-topleft: 10px;
  -webkit-border-top-left-radius: 10px;
  border: 1px solid #d3d3d3;
  border-bottom: none;
}

.ui-tabs-nav .ui-state-active a:hover {
  color: #FFFFFF;
  background: #FFFFFF url(../images/tabs-nav-selected-green.png) repeat-x scroll 50% 50%;
}

.ui-tabs-nav .ui-state-hover a {
  background: #FFFFFF url(../images/tabs-nav-hover-green.png) repeat-x scroll 50% 50%;
  border-top-right-radius: 10px;
  -moz-border-radius-topright: 10px;  
  -webkit-border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  -moz-border-radius-topleft: 10px;
  -webkit-border-top-left-radius: 10px;
  color: white;
}

.ui-state-hover {
  color: #e1852e;
}
/* ... */

